Fixed a spacing bug in the project grid on small screens

--- a/static/css/pages/_project-pages.scss
+++ b/static/css/pages/_project-pages.scss
@@ -12,27 +12,26 @@
   float: left;
 
   width: 50%;
-  height: 20em;
+  height: 25em;
 
 
   text-align: center;
 
   @media handheld, only screen and (max-width: 640px) {
-    float: none;
     width: 100%;
   }
 
   > * {
     margin: 0 auto;
-    width: 92%;
     padding-bottom: 10px;
+    width: 92%;
   }
 
-  > h1 {
-    padding-top: 0.625em;
+  h1 {
+    margin-top: 0;
   }
 
-  > h2 {
+  h2 {
     font-size: 1.5rem;
   }
 }
